fixade färger och alignade texten snyggare i Play

--- a/app/src/components/view/leaderboard/leaderboard.css
+++ b/app/src/components/view/leaderboard/leaderboard.css
@@ -1,4 +1,8 @@
 .leaderboard {
     text-align: left;
-    background-color: blue;
+    background-color: darkred;
+}
+
+.right {
+    text-align: right;
 }
